--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title: Deep Thoughts From the Desk of Jim Hall
+description: Mainly a place to write down some things learned
