--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
-theme: jekyll-theme-hacker
 title: Deep Thoughts From the Desk of Jim Hall
+author: Jim Hall
+email: jimhallsun@gmail.com
 description: Mainly a place to write down some things learned
+
+#social links
+twitter_username: jimhall37
+github_username: jimhall
+
+show_excerpts: true # set to false to remove excerpts on the homepage
+theme: jekyll-theme-hacker
